JNG-6382 Add agentic instructions