@@ -5,244 +5,208 @@
 **Repository:** BlackBeltTechnology/emf-genmodel-generator
 **License:** Eclipse Public License 2.0 (EPL-2.0)
 **Java Version:** 21
-**Build System:** Maven 3.9.4+ with Tycho 4.0.13 (Eclipse build tooling)
+**Build System:** Maven 3.9.4+ with Tycho 4.0.13 (Eclipse plugin build tooling)
 
 This is an Eclipse/Tycho-based code generation project that:
-1. **Generates** utility code from EMF GenModels (Ecore metamodels)
-2. **Produces** Builder patterns, Helper utilities, and CLI integration code
-3. **Supports** MWE2 (Model Workflow Engine) based generation workflows
-4. **Provides** Xtend-based templates for flexible code generation
-5. **Distributes** via Eclipse P2 update sites for Eclipse plugin integration
-
-## What This Project Does
-
-The EMF GenModel Generator extends EMF's standard code generation capabilities by automatically creating:
-- **Builder patterns** for fluent API construction of EMF model instances
-- **Helper utilities** for common model operations (validation, navigation, transformation)
-- **CLI integration** generating ModelSchema implementations for GraphQL querying via JUDO Model CLI
-- **Runtime support** for model instantiation, resource management, and validation
+1. **Generates** utility code from EMF GenModels (`.genmodel` files derived from Ecore metamodels)
+2. **Produces** Builder pattern classes for fluent EMF model construction
+3. **Produces** Helper utilities (`ModelResourceSupport`) for stream-based model access
+4. **Integrates** into MWE2 (Model Workflow Engine) workflows used by downstream metamodel projects
+5. **Distributes** as Eclipse plugins via P2 update sites
 
 ## Directory Structure
 
 ```
 emf-genmodel-generator/
-├── core/                   # Core engine and validation
-├── builder/                # Builder pattern generator
-├── helper/                 # Helper utilities generator
-├── cli/                    # CLI/GraphQL integration generator
-├── ecore/                  # Ecore support utilities
-├── feature/                # Eclipse feature packaging
-├── site/                   # Eclipse P2 update site
-└── .github/                # CI/CD workflows (GitHub Actions)
+├── core/                   # Base generation engine, validation, Guice DI
+├── builder/                # Builder pattern code generator
+├── helper/                 # Helper/ResourceSupport code generator
+├── ecore/                  # Self-hosted: generates builders+helpers for Ecore itself
+├── feature/                # Eclipse feature packaging (bundles all plugins)
+├── site/                   # Eclipse P2 update site for distribution
+├── .github/                # GitHub Actions CI/CD workflows
+├── .mvn/                   # Maven wrapper config, JVM settings, extensions
+└── pom.xml                 # Parent POM with Tycho configuration
 ```
 
 ## Core Modules
 
 ### Generation Engine Layer
 
-| Module | Type | Purpose |
-|--------|------|---------|
-| `core/` | eclipse-plugin | Core code generation engine using MWE2 workflows. Provides base templates, validation framework, and workflow orchestration. |
-| `ecore/` | eclipse-plugin | Ecore support utilities - EMF utilities for model instantiation, resource loading, and builder patterns. |
+| Module | Packaging | Purpose |
+|--------|-----------|---------|
+| `core/` | eclipse-plugin | Base code generation engine. Provides `AbstractGenModelGeneratorModule` (Guice DI config), `AbstractGenModelGeneratorStandaloneSetup` (injector creation), `GeneratorConfig` (base config), and validation framework. All generator modules extend these base classes. |
+| `builder/` | eclipse-plugin | Generates Builder pattern classes from GenModels. For each concrete EClass, produces `{ClassName}Builder.java` (fluent builder), `{Package}Builders.java` (facade with factory methods), and `I{Package}Builder.java` (builder interface). |
+| `helper/` | eclipse-plugin | Generates `{Model}ModelResourceSupport.java` with stream-based model element access, resource loading, factory methods, and optional UUID generation. |
 
-### Code Generator Modules
+### Self-Hosting Layer
 
-| Module | Type | Purpose |
-|--------|------|---------|
-| `builder/` | eclipse-plugin | Generates Builder pattern classes for fluent EMF model construction. Creates `*Builder` classes with chainable setters and validation. |
-| `helper/` | eclipse-plugin | Generates Helper utilities including `ModelResourceSupport` for streaming model elements, factory methods, and model navigation. |
-| `cli/` | eclipse-plugin | Generates CLI integration code: `ModelSchema` implementations, FQN resolvers, validators, and Operations classes for GraphQL querying. |
+| Module | Packaging | Purpose |
+|--------|-----------|---------|
+| `ecore/` | eclipse-plugin | Runs the builder and helper generators on the Ecore metamodel itself during `generate-sources` phase. Output goes to `src-gen/`. Provides `EcoreResourceImpl` and `EcoreResourceFactoryImpl` for Ecore resource handling. |
 
 ### Distribution Layer
 
-| Module | Type | Purpose |
-|--------|------|---------|
-| `feature/` | eclipse-feature | Eclipse feature bundling all generator plugins |
-| `site/` | eclipse-repository | P2 update site for Eclipse distribution |
+| Module | Packaging | Purpose |
+|--------|-----------|---------|
+| `feature/` | eclipse-feature | Bundles `core`, `builder`, `helper`, and `ecore` plugins into an installable Eclipse feature |
+| `site/` | eclipse-repository | P2 update site for Eclipse Marketplace distribution |
+
+## Architecture
+
+### Five-Layer Generator Pattern
+
+Each generator module (`builder/`, `helper/`) follows an identical five-layer architecture:
+
+1. **Config** (Xtend `@Data` class extending `GeneratorConfig`) — Module-specific configuration properties
+2. **Module** (Java class extending `AbstractGenModelGeneratorModule`) — Guice bindings, most importantly binding `IGenerator2` to the main template class
+3. **StandaloneSetup** (Java class extending `AbstractGenModelGeneratorStandaloneSetup`) — Creates Guice injector, registers EMF resource factories, binds config instances
+4. **Workflow** (Xtend class extending `AbstractCompositeWorkflowComponent`) — MWE2 workflow component that wires Reader → GeneratorComponent
+5. **Templates** (Xtend classes in `templates/` package) — The `IGenerator2` implementation and its delegate template classes that produce Java source
+
+### Class Hierarchy
+
+**Core base classes:**
+- `AbstractGenModelGeneratorModule` → binds `IGenerator2` (abstract), `ResourceSet`, `IResourceFactory`, `IResourceValidator`, `IOutputConfigurationProvider`
+- `AbstractGenModelGeneratorStandaloneSetup` → creates Guice injector, registers `.genmodel` extension
+- `GeneratorConfig` → `javaGenPath: String`, `printXmlOnError: Boolean`
+
+**Builder module:**
+- `ModelBuilderGeneratorModule` extends `AbstractGenModelGeneratorModule` → binds `IGenerator2` to `ModelBuilder`
+- `ModelBuilderGeneratorStandaloneSetup` extends `AbstractGenModelGeneratorStandaloneSetup` → binds `BuilderConfig`
+- `BuilderConfig` extends `GeneratorConfig` → adds `featureModifierMethodPrefix` (default: `"with"`), `nullCheckByDefault`
+- `BuilderGeneratorWorkflow` extends `AbstractCompositeWorkflowComponent`
+- `ModelBuilder` implements `IGenerator2` → injects `ModelBuilderFacade`, `ModelBuilderInterface`
+- `ModelBuilderFacade` → injects `ModelBuilderBuilder`, `ModelBuilderExtension`; generates facade classes
+- `ModelBuilderBuilder` → generates individual builder classes per concrete EClass
+- `ModelBuilderInterface` → generates builder interface per package
+- `ModelBuilderExtension` → shared helper methods (naming, paths, feature filtering, type checking)
+
+**Helper module:**
+- `ModelHelperGeneratorModule` extends `AbstractGenModelGeneratorModule` → binds `IGenerator2` to `ModelHelper`
+- `ModelHelperGeneratorStandaloneSetup` extends `AbstractGenModelGeneratorStandaloneSetup` → binds `HelperGeneratorConfig`
+- `HelperGeneratorConfig` extends `GeneratorConfig` → adds `generateUuid: Boolean`
+- `HelperGeneratorWorkflow` extends `AbstractCompositeWorkflowComponent`
+- `ModelHelper` implements `IGenerator2` → injects `ModelResourceSupport`
+- `ModelResourceSupport` → generates `{Model}ModelResourceSupport.java`; injects `Naming` extension
+
+### Generation Flow
+
+MWE2 workflows orchestrate the pipeline:
+
+1. **Workflow component** receives `modelDir` and `javaGenPath` parameters
+2. **StandaloneSetup** creates Guice injector with module-specific bindings
+3. **Reader** component loads `.genmodel` files from `modelDir` into a resource slot
+4. **GeneratorComponent** invokes `IGenerator2.doGenerate(resource, fsa, context)`
+5. **IGenerator2 implementation** iterates over `GenModel` objects in the resource
+6. **Template classes** use Xtend rich strings to produce Java source, written via `IFileSystemAccess2`
+
+### How Consumer Projects Use This
+
+Downstream metamodel projects (e.g., `judo-meta-esm`, `judo-meta-psm`, `judo-meta-rdbms`) define MWE2 workflows that invoke the generator:
+
+```
+component = hu.blackbelt.eclipse.emf.genmodel.generator.builder.BuilderGeneratorWorkflow {
+    javaGenPath = "src-gen/java"
+    modelDir = "model"
+}
+component = hu.blackbelt.eclipse.emf.genmodel.generator.helper.HelperGeneratorWorkflow {
+    javaGenPath = "src-gen/java"
+    modelDir = "model"
+}
+```
 
 ## Generated Code Overview
 
-### Builder Generator (`builder/`)
+### Builder Generator Output
 
-**Input:** GenModel (`*.genmodel` file)
-**Output:** For each concrete EClass:
-- `{ClassName}Builder.java` - Fluent builder with setters, validation, and build() method
-- `{Package}Builders.java` - Facade providing static factory methods
-- `I{Package}Builder.java` - Builder interface for polymorphism
+For each concrete EClass in a GenModel:
+- `{ClassName}Builder.java` — Fluent builder with `with{Feature}()` setters, `build()` method, mandatory field validation
+- `{Package}Builders.java` — Facade with static factory methods and decorator methods
+- `I{Package}Builder.java` — Builder interface for polymorphic construction
 
-**Example:**
 ```java
-// Generated code usage
 Customer customer = CustomerBuilder.create()
     .withName("John Doe")
     .withEmail("john@example.com")
-    .withAddress(AddressBuilder.create()
-        .withCity("New York")
-        .build())
     .build();
 ```
 
-**Templates:** Located in `builder/src/main/java/.../builder/templates/`
-- `ModelBuilderBuilder.xtend` - Individual builder classes
-- `ModelBuilderFacade.xtend` - Facade factory
-- `ModelBuilderInterface.xtend` - Builder interfaces
-- `ModelBuilderExtension.xtend` - Common helper methods
+### Helper Generator Output
 
-### Helper Generator (`helper/`)
-
-**Input:** GenModel
-**Output:**
-- `{Model}ModelResourceSupport.java` - Stream-based model element access
-- Helper methods for model validation, navigation, and transformation
-
-**Key Features:**
-- Stream API integration: `model.getStreamOf(Customer.class)`
-- Resource management and loading
-- Model validation hooks
-- Factory method generation
-
-**Templates:** Located in `helper/src/main/java/.../helper/templates/`
-- `ModelResourceSupport.xtend` - Main resource support class
-- `HelperExtension.xtend` - Helper utilities
-
-### CLI Generator (`cli/`)
-
-**Input:** GenModel
-**Output:** For JUDO metamodels (packages starting with `hu.blackbelt.judo.meta`):
-- `{Model}ModelSchema.java` - ModelSchema implementation
-- `{Model}FqnResolverImpl.java` - FQN resolution
-- `{Model}ValidatorImpl.java` - Validation integration
-- `{Class}Operations.java` - Per-class operations for GraphQL
-
-**CLI Integration:** The generated classes integrate with [judo-model-cli](https://github.com/BlackBeltTechnology/judo-model-cli) to provide:
-- **GraphQL Queries:** `{ esm { count(type: "EntityType") } }`
-- **Mutations:** `create`, `update`, `delete` operations (ESM only)
-- **Validation:** `validate` command integration
-- **FQN Resolution:** Resolve elements by fully qualified names
-
-**Templates:** Located in `cli/src/main/java/.../cli/templates/`
-- `ModelSchemaGenerator.xtend` - ModelSchema implementation
-- `OperationsImpl.xtend` - Per-class operations
-- `CliExtension.xtend` - CLI-specific utilities
+For each GenModel:
+- `{Model}ModelResourceSupport.java` — Stream-based model element access, resource loading, factory methods, optional UUID generation
 
 ## Technology Stack
 
 ### Core Technologies
-- **Eclipse Modeling Framework (EMF)** - Metamodel foundation
-- **Ecore** - Model definition language (`.ecore` files)
-- **GenModel** - EMF code generation model (`.genmodel` files)
-- **MWE2** (Model Workflow Engine) 2.13.0 - Workflow orchestration
-- **Xtend** 2.39.0 - Template-based code generation language
-- **Xtext** 2.39.0 - Language framework infrastructure
-- **Tycho** 4.0.13 - Eclipse plugin build
+- **Eclipse Modeling Framework (EMF)** — Metamodel foundation (`org.eclipse.emf.codegen.ecore`)
+- **Ecore** — Model definition language (`.ecore` files)
+- **GenModel** — EMF code generation model (`.genmodel` files)
+- **MWE2** (Model Workflow Engine 2) — Workflow orchestration (`org.eclipse.emf.mwe2.launch`)
+- **Xtend** 2.39.0 — Template-based code generation language
+- **Xtext** 2.39.0 — Language framework infrastructure (provides `IGenerator2`, `ISetup`, DI)
+- **Tycho** 4.0.13 — Eclipse plugin Maven build
 
 ### Build & Quality
-- **Maven** 3.9.4+ with wrapper
-- **GitHub Actions** - CI/CD pipeline
-- **JaCoCo** 0.8.12 - Code coverage
-- **SonarQube** 3.9.1 - Code quality analysis
-- **Lombok** 1.18.34 - Annotation processing
+- **Maven** 3.9.4+ with wrapper (`./mvnw`)
+- **GitHub Actions** — CI/CD pipeline on custom `judong` runner
+- **JaCoCo** 0.8.12 — Code coverage
+- **SonarQube** 3.9.1 — Code quality analysis
+- **Lombok** 1.18.34 — Annotation processing
+- **Logback** 1.5.12 — Logging (test config at root)
 
 ## Build Commands
 
 ```bash
 # Standard build
-mvn clean install
-# or with wrapper
 ./mvnw clean install
 
-# Memory requirements (configured in .mvn/jvm.config)
-# -Xms1024m -Xmx2048m
+# Skip tests (no tests currently exist, but saves plugin overhead)
+./mvnw clean install -DskipTests
 
-# Skip tests for faster builds
-mvn clean install -DskipTests
+# Build a single module
+./mvnw clean install -pl builder
+
+# Memory is configured in .mvn/jvm.config: -Xms1024m -Xmx2048m
 ```
 
 ### Maven Profiles
 
 | Profile | Purpose |
 |---------|---------|
-| `modules` | Includes all 8 submodules (default) |
-| `sign-artifacts` | GPG signing for Maven Central release |
-| `release-central` | Deploy to Maven Central (sonatype) |
-| `release-judong` | Deploy to BlackBelt internal repository |
-
-## Code Generation Workflow
-
-### Integration with Metamodel Projects
-
-This project is used by metamodel projects like `judo-meta-esm`, `judo-meta-psm`, `judo-meta-rdbms`, etc.
-
-**Typical MWE2 Workflow** (in metamodel projects):
-```
-model/
-├── model/
-│   ├── {model}.ecore        # Metamodel definition
-│   └── {model}.genmodel     # EMF code generation config
-└── src/
-    └── workflow/
-        └── generateModel.mwe2  # MWE2 workflow
-```
-
-**Example MWE2 Configuration:**
-```xtend
-module generateModel
-
-import org.eclipse.emf.mwe.utils.*
-
-var modelDir = "model"
-var javaGenPath = "src-gen/java"
-
-Workflow {
-    // Load GenModel
-    component = org.eclipse.emf.mwe.utils.Reader {
-        uri = "${modelDir}/${model}.genmodel"
-        slot = "genModel"
-    }
-
-    // Generate standard EMF code
-    component = org.eclipse.emf.codegen.ecore.genmodel.generator.GenModelGeneratorAdapter {
-        genModel = slot:genModel
-    }
-
-    // Generate Builders
-    component = hu.blackbelt.eclipse.emf.genmodel.generator.builder.BuilderGeneratorWorkflow {
-        javaGenPath = javaGenPath
-        modelDir = modelDir
-    }
-
-    // Generate Helpers
-    component = hu.blackbelt.eclipse.emf.genmodel.generator.helper.HelperGeneratorWorkflow {
-        javaGenPath = javaGenPath
-        modelDir = modelDir
-    }
-
-    // Generate CLI integration
-    component = hu.blackbelt.eclipse.emf.genmodel.generator.cli.CliGeneratorWorkflow {
-        javaGenPath = javaGenPath
-        modelDir = modelDir
-    }
-}
-```
+| `modules` | Includes all 6 submodules (default, active when `skipModules` is not `true`) |
+| `sign-artifacts` | GPG signing for release artifacts |
+| `release-dummy` | Local file:// distribution (for testing) |
+| `release-judong` | Deploy to BlackBelt Nexus (`nexus.judo.technology`) |
+| `release-central` | Deploy to Maven Central via Sonatype OSSRH |
+| `release-p2-judong` | Upload P2 site to BlackBelt Nexus |
+| `generate-github-asciidoc-diagrams` | Generate diagram images from AsciiDoc |
+| `update-source-code-license` | Update EPL-2.0 license headers in source files |
 
 ## Key Configuration Files
 
 | File | Purpose |
 |------|---------|
-| `pom.xml` | Parent POM with module definitions, Tycho configuration |
-| `.mvn/jvm.config` | JVM memory settings for Maven builds |
-| `{module}/META-INF/MANIFEST.MF` | OSGi bundle metadata |
-| `feature/feature.xml` | Eclipse feature definition |
-| `site/category.xml` | P2 update site categories |
+| `pom.xml` | Parent POM: module list, Tycho config, P2 repositories, all profiles |
+| `.mvn/jvm.config` | JVM memory settings, `--add-opens` for Tycho, P2 mirror disable |
+| `.mvn/extensions.xml` | Maven Wagon extensions (file, WebDAV/Jackrabbit) for deployment |
+| `{module}/META-INF/MANIFEST.MF` | OSGi bundle metadata: dependencies, exported packages |
+| `{module}/src/main/resources/workflow/*.mwe2` | MWE2 workflow definitions |
+| `feature/feature.xml` | Eclipse feature definition (which plugins to bundle) |
+| `site/category.xml` | P2 update site category definitions |
+| `logback-test.xml` | Root-level test logging configuration |
 
 ## Development Environment
 
 **Required:**
-- Java 21 JDK
-- Maven 3.9.4+
+- Java 21 JDK (Zulu recommended, used by CI)
+- Maven 3.9.4+ (or use `./mvnw`)
+
+**Optional (for Xtend template editing):**
 - Eclipse IDE with:
   - m2e (Maven integration)
-  - Xtend/Xtext plugins
+  - Xtend/Xtext plugins from Eclipse Marketplace
   - EMF/Ecore modeling tools
   - MWE2 runtime
 
@@ -251,20 +215,12 @@ Workflow {
 2. Install Xtext/Xtend plugins from Eclipse Marketplace
 3. Run MWE2 workflows with "Run As > MWE2 Workflow"
 
-## Git Workflow
-
-- **Main Branch:** `develop`
-- **Versioning:** SNAPSHOT-based (currently 1.1.1-SNAPSHOT)
-- **CI/CD:** GitHub Actions builds on every commit
-- **Release Process:** Automated via CI to Maven Central and P2 site
-
 ## Xtend Template Development
 
-### Understanding Xtend Templates
+### Template Syntax
 
-Xtend is a Java-based language with enhanced template syntax. Key features used in this project:
+Xtend uses rich string syntax with guillemet characters:
 
-**Template Syntax:**
 ```xtend
 def generateClass(GenClass it) '''
 package «genPackage.packageFqName»;
@@ -284,156 +240,79 @@ public class «name»Builder {
 '''
 ```
 
-**Extension Methods:**
-- `def methodName(Type it)` - Define method on type
-- Can be called as: `object.methodName()` or `methodName(object)`
-- Used for reusable helper methods
+**Key patterns:**
+- `'''...'''` — Multi-line template strings
+- `«expression»` — Expression interpolation (guillemets, not angle brackets)
+- `«FOR item : collection»...«ENDFOR»` — Template loops
+- `«IF condition»...«ENDIF»` — Template conditionals
+- `def methodName(Type it) '''...'''` — Extension methods (callable as `object.methodName()`)
 
-**Key Patterns:**
-- `'''...'''` - Multi-line template strings
-- `«expression»` - Expression interpolation in templates
-- `«FOR item : collection»...«ENDFOR»` - Template loops
-- `«IF condition»...«ENDIF»` - Template conditionals
+### Template File Locations
 
-### Common Extension Classes
+| Module | Templates Directory | Key Files |
+|--------|-------------------|-----------|
+| `builder/` | `src/main/java/hu/blackbelt/eclipse/emf/genmodel/generator/builder/templates/` | `ModelBuilder.xtend` (entry point), `ModelBuilderBuilder.xtend`, `ModelBuilderFacade.xtend`, `ModelBuilderInterface.xtend`, `ModelBuilderExtension.xtend` |
+| `helper/` | `src/main/java/hu/blackbelt/eclipse/emf/genmodel/generator/helper/templates/` | `ModelHelper.xtend` (entry point), `ModelResourceSupport.xtend`, `Naming.xtend` |
 
-| Class | Module | Purpose |
-|-------|--------|---------|
-| `ModelBuilderExtension` | builder | Common helpers for builder generation (packageName, capitalize, etc.) |
-| `CliExtension` | cli | CLI-specific helpers (isJudoModel, isPrimaryModel, path helpers) |
-| `HelperExtension` | helper | Helper generation utilities |
+### Common Development Tasks
 
-## CLI Integration Details
-
-### Generated CLI Components
-
-For JUDO metamodels (packages starting with `hu.blackbelt.judo.meta`):
-
-**ModelSchema (`{Model}ModelSchema.java`):**
-- Implements `hu.blackbelt.judo.cli.api.ModelSchema`
-- Provides model type identification
-- Binds/unbinds to ResourceSets for FQN resolution
-- Returns Operations providers for GraphQL querying
-- Supports validation and mutations (ESM only)
-
-**FQN Resolver (`{Model}FqnResolverImpl.java`):**
-- Resolves Fully Qualified Names to EObjects
-- Format: `package::subpackage::ElementName.feature`
-- Example: `demo::entities::Customer.name`
-
-**Validator (`{Model}ValidatorImpl.java`):**
-- Integrates EVL (Epsilon) or Java validation
-- Called by CLI `validate` command
-
-**Operations (`{Class}Operations.java`):**
-- Per-class streaming and description generation
-- Used by GraphQL queries
-- Provides EClass, type name, and streaming methods
-
-### CLI Usage Example
-
-```bash
-# Query model via GraphQL
-judo-cli graphql "{ esm { count(type: \"EntityType\") } }"
-
-# List all entities
-judo-cli graphql "{ entities { fqn name } }"
-
-# Validate model
-judo-cli validate
-
-# Create new element (ESM only - mutations enabled)
-judo-cli graphql 'mutation { create(type: "EntityType", data: {...}) }'
-```
-
-**See Also:** [judo-model-cli documentation](https://github.com/BlackBeltTechnology/judo-model-cli) for complete CLI capabilities.
-
-## Important Notes
-
-1. **Xtend Compilation:** Xtend templates must be compiled before Java compilation
-2. **EMF GenModel Understanding:** Familiarize yourself with EMF's GenModel concepts before modifying templates
-3. **JUDO-Specific Generation:** CLI code is only generated for JUDO metamodels (`hu.blackbelt.judo.meta.*` packages)
-4. **Builder Pattern:** Generated builders validate mandatory features and provide type-safe construction
-5. **Extension Inheritance:** CLI and Helper generators extend `ModelBuilderExtension` for shared utilities
-6. **Template Testing:** Test template changes by regenerating code in metamodel projects (esm, psm, rdbms, etc.)
-
-## Common Development Tasks
-
-### Adding a New Template
-
-1. Create Xtend class in appropriate module's `templates/` package
+**Adding a new template:**
+1. Create Xtend class in the appropriate module's `templates/` package
 2. Add `@Inject extension` for helper methods
-3. Implement `doGenerate(GenModel, IFileSystemAccess2)` method
-4. Register in module's main generator class (e.g., `Cli.xtend`)
-5. Update workflow class to invoke the template
+3. Implement generation logic using Xtend rich strings
+4. Inject and call from the module's `IGenerator2` implementation (e.g., `ModelBuilder.xtend`)
 
-### Modifying Existing Templates
+**Modifying existing templates:**
+1. Edit the `.xtend` file — Xtend compiles to Java in `xtend-gen/` (never edit those)
+2. Rebuild: `./mvnw clean install -pl <module>`
+3. Test by running the MWE2 workflow in a consumer metamodel project
+4. Verify generated code in consumer's `src-gen/` compiles correctly
 
-1. Locate template in `{module}/src/main/java/.../templates/`
-2. Edit Xtend code - remember template syntax: `'''...'''` and `«...»`
-3. Rebuild module: `mvn clean install`
-4. Test in metamodel project by running MWE2 workflow
-5. Verify generated code compiles and behaves correctly
+**Debugging:**
+1. Check Xtend compiler output in Eclipse for compilation issues
+2. Check generated Java in consumer project's `src-gen/` for runtime errors
+3. Add `println()` in Xtend templates for debug output during generation
+4. Enable MWE2 debug logging in the workflow file
 
-### Debugging Generated Code
+## Git Workflow
 
-1. **Xtend Compilation Issues:** Check Xtend compiler output in Eclipse
-2. **Runtime Errors:** Check generated Java code in `src-gen/` of metamodel projects
-3. **MWE2 Workflow Issues:** Enable MWE2 debug logging in workflow file
-4. **Template Logic:** Add `println()` statements in Xtend templates for debugging
+- **Main Branch:** `develop`
+- **Versioning:** CI-friendly with `${revision}` property (currently 1.1.1-SNAPSHOT)
+- **Branch naming:** GitFlow-based — `feature/JNG-xxx`, `release/x.y.z`, `bugfix/JNG-xxx`, `hotfix/JNG-xxx`
+- **Commit rule:** Every commit must reference a JIRA ticket (`JNG-xxx`)
+- **CI/CD:** GitHub Actions on custom `judong` runner, triggered on push to `develop` and PRs
+- **Release:** Automated via `release.yml` workflow — creates PRs to `master` and `develop`, signs and deploys artifacts
 
 ## Related Projects
 
-- **judo-meta-esm** - Enterprise Service Model metamodel (uses this generator)
-- **judo-meta-psm** - Platform Specific Model metamodel
-- **judo-meta-asm** - Abstract Syntax Model metamodel
-- **judo-meta-rdbms** - Relational Database metamodel
-- **judo-meta-ui** - User Interface metamodel
-- **judo-model-cli** - CLI tool for GraphQL querying and mutations
+- **judo-meta-esm** — Enterprise Service Model metamodel (uses this generator)
+- **judo-meta-psm** — Platform Specific Model metamodel
+- **judo-meta-asm** — Abstract Syntax Model metamodel
+- **judo-meta-rdbms** — Relational Database metamodel
+- **judo-meta-ui** — User Interface metamodel
 
 ## Related Documentation
 
-- `README.adoc` - Basic project information
-- `CONTRIBUTING.adoc` - Contribution guidelines
-- [EMF Documentation](https://www.eclipse.org/modeling/emf/docs/) - Eclipse Modeling Framework
-- [Xtend Documentation](https://www.eclipse.org/xtend/documentation/) - Xtend language reference
-- [judo-model-cli/AGENTS.md](https://github.com/BlackBeltTechnology/judo-model-cli) - JUDO Model CLI documentation
-
-## CI/CD Pipeline
-
-**GitHub Actions Workflow** (`.github/workflows/build.yml`):
-- Triggered on push to `develop` and `feature/*` branches
-- Runs: `mvn clean install`
-- Uploads build artifacts
-- Runs code quality checks (JaCoCo, SonarQube)
-
-**Release Process:**
-1. Update version in `pom.xml` (remove `-SNAPSHOT`)
-2. Commit and tag: `git tag v1.1.1`
-3. CI builds and deploys to Maven Central
-4. Update site deployed to P2 repository
-5. Increment version to next SNAPSHOT
+- [README.md](README.md) — Project overview with architecture diagrams
+- [CONTRIBUTING.md](CONTRIBUTING.md) — Development setup and contribution guidelines
+- [.github/CIFLOW.md](.github/CIFLOW.md) — CI/CD pipeline and branching documentation
+- [EMF Documentation](https://www.eclipse.org/modeling/emf/docs/) — Eclipse Modeling Framework
+- [Xtend Documentation](https://www.eclipse.org/xtend/documentation/) — Xtend language reference
 
 ## Troubleshooting
 
 ### Xtend Compilation Errors
 **Issue:** "Xtend compiler not found"
-**Solution:** Install Xtext/Xtend plugins in Eclipse
+**Solution:** Install Xtext/Xtend plugins in Eclipse, or ensure `xtend-maven-plugin` 2.39.0 is resolved
 
 ### Tycho Build Failures
 **Issue:** "Cannot resolve P2 dependencies"
-**Solution:** Check `.mvn/extensions.xml` and P2 repository URLs in `pom.xml`
+**Solution:** Check P2 repository URLs in `pom.xml` `<repositories>` section and `.mvn/extensions.xml`
 
 ### Generated Code Not Found
 **Issue:** Generated classes missing after build
-**Solution:** Run MWE2 workflow first, then Maven build. Check `src-gen/` directories.
+**Solution:** For the `ecore/` module, ensure the MWE2 workflow runs during `generate-sources`. For consumer projects, run MWE2 workflow first, then build. Check `src-gen/` directories.
 
 ### Memory Issues During Build
 **Issue:** OutOfMemoryError
-**Solution:** Increase heap in `.mvn/jvm.config` or use: `MAVEN_OPTS="-Xmx2g" mvn clean install`
-
-## Contact & Support
-
-- **GitHub Issues:** https://github.com/BlackBeltTechnology/emf-genmodel-generator/issues
-- **Organization:** BlackBelt Technology
-- **License:** EPL-2.0
+**Solution:** Increase heap in `.mvn/jvm.config` (currently `-Xms1024m -Xmx2048m`) or override with `MAVEN_OPTS="-Xmx3g" ./mvnw clean install`
